<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/drawer_opcion1"
            android:icon="@mipmap/flecha"
            android:title="@string/drawer_opcion1"/>

        <item android:id="@+id/drawer_opcion2"
            android:icon="@mipmap/flecha"
            android:title="@string/drawer_opcion2"/>

        <item android:id="@+id/drawer_opcion3"
            android:icon="@mipmap/flecha"
            android:title="@string/drawer_opcion3"/>

        <item android:id="@+id/drawer_opcion4"
            android:icon="@mipmap/flecha"
            android:title="@string/drawer_opcion4"/>

        <item android:id="@+id/drawer_opcion5"
            android:icon="@mipmap/flecha"
            android:title="@string/drawer_opcion5"/>

    </group>

</menu>